implement update and view detail for album page

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
   --card-foreground: oklch(0.3211 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.3211 0 0);
-  --primary: oklch(0.5676 0.2021 283.0838);
+  --primary: oklch(56.761% 0.20219 283.089);
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.8214 0.072 249.3482);
   --secondary-foreground: oklch(0.3211 0 0);
